a bunch of stuff

--- a/docs/thesis/discussion.tex
+++ b/docs/thesis/discussion.tex
@@ -6,6 +6,10 @@ First, there is two points that should be remarked.
  
 2) The behavior regarded in this thesis leads to a sufficiently robust network with short average paths. Strategies that fulfill a valuable niche in the network will be profitable and the emerging real network will probably be more efficient than any man made model could ever be as nodes struggle in the most Darwinian sense to provide liquid paths between paying nodes.
 
+\section{Bias}
+
+
+
 \section{Balanced Channels}
 
 At first sight it may seem obvious that the fee price structure is flawed as it cannot incentive, e.g give a discount, for a route in such a direction so it leaves channels in a more balanced state. A change in fee structure obviously change the validity of each strategy.
@@ -56,7 +60,7 @@ However there are some clear problems with this approach. Every new payment woul
 
 There is thus no clear way to 'discount' routing in a balancing direction.
 
-It is further unclear how much immediate balance will matter for routing success and other solutions have been proposed to levitate this pressure point. E.g René Pickhardt JIT-routing~\cite{pickard:jit} and branching out utilizing multiple paths to fulfill liquidity needs.   
+It is further unclear how much immediate balance will matter for routing success and other solutions have been proposed to levitate this pressure point. E.g René Pickhardt JIT-routing~\cite{pickard:jit} and branching - utilizing multiple paths to fulfill the liquidity needed.
 
 \section{Future work}
 
@@ -74,7 +78,7 @@ Albert-László Barabási recently remarked that the bottleneck in network theor
 
 \subsection{Game Theory}
 
-Much similar to network theory, Game theory have been difficult to use in empirical context. Especially in EGT as nature seldom have clear pay-off matrices. Even very clear examples, such as with the Bacteriophage shown by Turner and Chao~\cite{turner:chao:prisoners:dilemma, nowak:sigmund:phage}, still contains significant noise. Market data on the other hand, especially prices, is available in droves and it is arguable easier to apply game theory to economics. It usually still require effort to retrieve data, e.g. geo-locations of competing businesses. The \gls{Lightning Network} might give us further insight into regional nuances and due to completeness bridge the gap between individual strategy with full market Marshallian dynamics.    
+Much similar to Network Theory, Game theory have been difficult to use in empirical context. Especially in EGT as nature seldom have clear pay-off matrices. Even very clear examples, such as with the Bacteriophage shown by Turner and Chao~\cite{turner:chao:prisoners:dilemma, nowak:sigmund:phage}, still contains significant noise. Market data on the other hand, especially prices, is available in droves and it is arguable easier to apply game theory to economics. It usually still require effort to retrieve data, e.g. geo-locations of competing businesses. The \gls{Lightning Network} might give us further insight into regional nuances and due to completeness bridge the gap between individual strategy with full market Marshallian dynamics.    
 
 \subsection{Fee complexity}
 
