--- a/docs/thesis/macroeconomics.tex
+++ b/docs/thesis/macroeconomics.tex
@@ -64,7 +64,7 @@ The asset could then be retrieved for the note on demand. The notes themselves c
 	\label{fig:seb:promissory:note}
 \end{figure}
 
-By the late 19th century almost all major currencies was under the gold standard as seen in table \ref{tab:gold:standard}.
+By the late 19th century almost all major currencies was under the gold standard as seen in Table~\ref{tab:gold:standard}.
 
 \begin{table}[!htb]
 	\begin{tabular}{lllll}
@@ -110,7 +110,7 @@ As response to the Great Depression U.S President Franklin Roosevelt issued Exec
 
 A new economic era began following ideas of Maynard Keynes of economic interventionism and monetary policies set to aid growth. Keynes rebutted the classical idea that 'supply creates its own demand' and suggested that aggregated demand and aggregated supply may get stuck in an equilibrium with high unemployment~\cite{keynes:general:theory}. This would motivate government intervention to increase the aggregated demand. While demand may be altered by a government in multiple ways the far most effective one is by altering the money supply\footnote{The increased supply can be used directly by government but is usually used by lowering the funds rate, increasing investments and thus demand. Quantitative easing is another term used to describing this method. }. Although the dollar was still technically redeemable for gold the elastic money supply made it possible to steer the economy by means of monetary policy. 
 
-The dollar was re-pegged multiple times between 1968-1971 as part of the Nixon chock~\cite{bordo:bretton:woods}. In 1971 Nixon ended the Bretton Woods agreement~\cite{bordo:bretton:woods}; the international agreement of exchange rates between currencies, rendering the dollar and all currencies pegged to the Dollar true fiat currencies. After the initial shock the free floating currencies failed to keep pace with gold due to money supply increases causing inflation(Se figure \ref{fig:gold:price:major:currency}).
+The dollar was re-pegged multiple times between 1968-1971 as part of the Nixon chock~\cite{bordo:bretton:woods}. In 1971 Nixon ended the Bretton Woods agreement~\cite{bordo:bretton:woods}, the international agreement of exchange rates between currencies, rendering the dollar and all currencies pegged to the Dollar true fiat currencies. After the initial shock the free floating currencies failed to keep pace with gold due to money supply increases causing inflation(Se figure \ref{fig:gold:price:major:currency}).
 
 \begin{figure}[!htb]
 	\centering
@@ -122,7 +122,11 @@ The dollar was re-pegged multiple times between 1968-1971 as part of the Nixon c
 \end{figure}
 
 \twocolumn
+
+
+
 \begin{table}[t]
+	\hspace{-0.85cm}
 	\begin{tabular}{llllll}
 		Nation & Currency & Period & Highest monthly Inf. & Avg. daily Inf. & Type of index\\
 		Hungary & Pengő & Aug. 1945 - Jul. 1946 & $ 4.19 × 10^{16}\% $ & 207\% & Consumer \\
@@ -133,17 +137,24 @@ The dollar was re-pegged multiple times between 1968-1971 as part of the Nixon c
 		Venezuela(§) & Bolívar & Jan. 2018 - ongoing & - & 4.1\% & - \\ 
 
 	\end{tabular}
-
-	\captionsetup{width=11cm}
-	\caption{\textit{ Hyperinflation of selected fiat currencies. From the Hanke-Krus Hyperinflation Table~\cite{hanke:krus:hyperinflation:table}. §The Venezuela numbers are only a projection by the International Monetary Fund
-			and the dates and rate will most likely change with more accurate data~\cite{hanke:hyperinflation} and when the inflationary period is over.
-	}}
 	\label{tab:inflation}
+	%\captionsetup{width=11cm, justification=raggedright}
+	%\caption{
+	%}
+
 \end{table}
+
+\begin{textblock*}{11cm}(5cm,9cm)
+\textbf{Table 2: }\textit{ 
+	Hyperinflation of selected fiat currencies. From the Hanke-Krus Hyperinflation Table~\cite{hanke:krus:hyperinflation:table}. §The Venezuela numbers~\cite{hanke:hyperinflation} are only a projection by the International Monetary Fund and the dates and rate will most likely change with more accurate data and when the inflationary period is over.
+}
+\end{textblock*}
+
+\vspace*{1.5cm}
 
 \subsection{Hyperinflation}
 
-The major currencies seen in figure \ref{fig:gold:price:major:currency} are far from worst in their ability to hold value. Fiat currencies are highly dependent on its authority and their willingness to increase the money supply and history provides us with some catastrophes as seen in table \ref{tab:inflation}.
+The major currencies seen in figure \ref{fig:gold:price:major:currency} are far from worst in their ability to hold value. Fiat currencies are highly dependent on its authority and their willingness to increase the money supply and history provides us with some catastrophes as seen in Table 2.
 
 During the last 250 years hyperinflation\footnote{There is no official definition of what constitutes hyper inflation but a rule of thumb seem to be over 50\% annual inflation.} has occurred at least 54 times~\cite{hanke:krus:hyperinflation:table, hanke:hyperinflation}. Many countries going through multiple inflationary periods, e.g. China 43-45, 47-49 and Georgia 92, 93-94. Hyperinflation devastates all savings and effectually letting savings subsidize the newly printed currency. The inflation narrows the time horizon of trade, since capital will go worthless in a short while, making it very difficult to formalize any long term investment or running a normal economy. 
 
@@ -153,7 +164,7 @@ The economic system built upon fiat currencies is based on the trust in the issu
 
 \newpage
 \noindent
-\vspace{6cm}
+\vspace{5cm}
 
 \subsection{Relevancy}
 In many ways it helps to think of bitcoin as both a bearer instrument and as a monetary policy and how the system is designed as such. This section is an incomplete view on it's own and for further reading these recommendations are good starting points: 
