--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -31,6 +31,8 @@
 \usepackage{csquotes}
 \usepackage[T1]{fontenc}
 
+\usepackage[absolute,overlay]{textpos}
+
 % for placeholder text
 \usepackage{lipsum} % to generate Lorem Ipsum
 
